Implement a more flexible extension module scheme which allows modules to be placed in a known location (via XMODPATH) and/or be located and loaded by any URL including remote hosts. Module jars are no longer required to be in the classpath, they are defined as part of the module.xml file.